# mcp-server-apache-airflow

./: .gitignore  .mcp.example.json  AIRFLOW-MCP-SERVERS.md  Dockerfile  GETTING-STARTED.md  LICENSE  Makefile  README.md  TEAM-GUIDE.md  mcp-settings.example.json  pyproject.toml  pytest.ini  setup-mcp.sh  smithery.yaml  update-hosts.sh
.airflow_state/: cookies.enc  key
.amp/: settings.example.json
.cursor/rules/: modelcontextprotocol.mdc  python.mdc
.github/: CODEOWNERS
.github/workflows/: claude.yml  lint.yml  publish.yml  test.yml
docs/: SSO_AUTHENTICATION.md
examples/: README.md  analyze-dag-run-configs.md
src/: __init__.py  __main__.py  airflow.py  enums.py  envs.py  main.py  routes.py  server.py
src/airflow/: airflow_client.py  config.py  connection.py  dag.py  dagrun.py  dagstats.py  dagwarnings.py  dataset.py  eventlog.py  importerror.py  monitoring.py  plugin.py  pool.py  provider.py  sso_cookie_auth.py  taskinstance.py  variable.py  xcom.py
test/: conftest.py  test_airflow_client.py  test_main.py  test_routes.py  test_server.py
test/airflow/: test_dag.py  test_taskinstance.py
