[project]
name = "mcp-server-apache-airflow"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for Apache Airflow"
authors = [
    { name = "Gyeongmo Yang", email = "me@gmyang.dev" }
]
dependencies = [
    "httpx>=0.24.1",
    "click>=8.1.7",
    "mcp>=0.1.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/yangkyeongmo/mcp-server-apache-airflow"
Repository = "https://github.com/yangkyeongmo/mcp-server-apache-airflow.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-apache-airflow = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
