[project]
name = "mcp-server-apache-airflow"
version = "0.2.9"
description = "Model Context Protocol (MCP) server for Apache Airflow"
authors = [
    { name = "Gyeongmo Yang", email = "me@yanggyeongmo.com" }
]
dependencies = [
    "httpx>=0.24.1",
    "click>=8.1.7",
    "mcp>=0.1.0",
    "apache-airflow-client>=2.7.0,<3",
    "fastmcp>=2.11.3",
    "PyJWT>=2.8.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "airflow", "apache-airflow", "model-context-protocol"]

[project.optional-dependencies]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/yangkyeongmo/mcp-server-apache-airflow"
Repository = "https://github.com/yangkyeongmo/mcp-server-apache-airflow.git"
"Bug Tracker" = "https://github.com/yangkyeongmo/mcp-server-apache-airflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-apache-airflow = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = [
    "src/**/*.py",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]
